# ms-paint-compositor

./: Cargo.toml  README.md  build.rs
paint-brush/: index.theme  paint-brush.config
paint-brush/cursors/: paint-brush
src/: color.rs  keyboard.rs  main.rs  output.rs  pointer.rs
