[package]
name = "ms-paint-compositor"
description = "MS Paint as a Wayland compositor"
version = "1.0.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
repository = "https://github.com/Timidger/ms-paint-compositor"
keywords = ["Wayland", "compositor", "window", "wlroots", "microsoft"]
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
wlroots = { path = "../wlroots-rs", features = ["unstable", "static"] }

[build-dependencies]
fs_extra = "1.0"
